Update Header.css: add media query to fix background attachment on smaller screens
The change includes adding a media query to apply the `background-attachment: fixed;` property only on screens with a minimum width of 500px for

--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -2,7 +2,8 @@
   height: 50vh;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+
+  background-position: center;
   background-size: cover;
   display: flex;
   justify-content: center;
@@ -10,6 +11,12 @@
   font-weight: 700;
   color: white;
   text-shadow: 1px 1px black;
+}
+
+@media all and (min-width: 500px) {
+  #section1 {
+    background-attachment: fixed;
+  }
 }
 
 #section2 {
